@@ -7,7 +7,7 @@ import gg.projecteden.nexus.models.bearfair21.BearFair21ConfigService;
 import gg.projecteden.nexus.models.nerd.Nerd;
 import gg.projecteden.nexus.models.nerd.Rank;
 import gg.projecteden.nexus.utils.PlayerUtils;
-import gg.projecteden.nexus.utils.WorldGroup;
+import gg.projecteden.nexus.utils.worldgroup.WorldGroup;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.Getter;
@@ -16,8 +16,6 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.bukkit.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -35,10 +33,7 @@ public class Godmode implements PlayerOwnedObject {
 	private boolean enabled = false;
 
 	@Getter
-	private static final List<String> disabledWorlds = new ArrayList<>(Arrays.asList("gameworld", "deathswap")) {{
-		addAll(WorldGroup.SKYBLOCK.getWorldNames());
-		addAll(WorldGroup.ONEBLOCK.getWorldNames());
-	}};
+	private static final List<WorldGroup> disabledWorlds = List.of(WorldGroup.MINIGAMES, WorldGroup.SKYBLOCK);
 
 	public boolean isActive() {
 		if (!isOnline())
@@ -47,11 +42,11 @@ public class Godmode implements PlayerOwnedObject {
 		final Player player = getOnlinePlayer();
 		if (!Nerd.of(this).hasMoved())
 			return true;
-		if (player.getWorld().getName().equals("bearfair21") && new BearFair21ConfigService().get0().isEnabled(WARP) && !PlayerUtils.isVanished(player))
+		if ("bearfair21".equals(player.getWorld().getName()) && new BearFair21ConfigService().get0().isEnabled(WARP) && !PlayerUtils.isVanished(player))
 			return false;
 		if (!Rank.of(player).isStaff())
 			return false;
-		if (disabledWorlds.contains(player.getWorld().getName()))
+		if (disabledWorlds.contains(WorldGroup.of(player)))
 			return false;
 
 		return enabled;
